--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,6 @@ android/.settings/org.eclipse.buildship.core.prefs
 android/app/.classpath
 android/app/.project
 android/app/.settings/
+
+
+lib\src\utils\settings.dart
